fix [#32232] Running script that changes area.type crashes blender.

(reported the bug to keep some reference to the script that crashes).